[gd_scene load_steps=2 format=3 uid="uid://wnewui_001"]

[ext_resource type="Script" path="res://game/scripts/ui/WhatsNewUI.gd" id="1_script"]

[node name="WhatsNewUI" type="CanvasLayer"]
layer = 110
script = ExtResource("1_script")

[node name="Dimmer" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -100.0
offset_right = 140.0
offset_bottom = 100.0

[node name="TitleLabel" type="Label" parent="Panel"]
offset_left = 10.0
offset_top = 10.0
offset_right = 270.0
offset_bottom = 30.0
text = "What's New"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
offset_left = 10.0
offset_top = 38.0
offset_right = 270.0
offset_bottom = 148.0

[node name="NotesContainer" type="VBoxContainer" parent="Panel/ScrollContainer"]
custom_minimum_size = Vector2(250, 0)
size_flags_horizontal = 3

[node name="DismissButton" type="Button" parent="Panel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = 74.0
offset_right = 35.0
offset_bottom = 96.0
text = "OK"
